// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SiderMenu should render menu by user role 1`] = `
<div>
  <ul
    class="ant-menu ant-menu-root ant-menu-inline ant-menu-dark"
    data-menu-list="true"
    role="menu"
    tabindex="0"
  >
    <li
      class="ant-menu-item ant-menu-item-selected"
      data-menu-id="rc-menu-uuid-test-dashboard"
      role="menuitem"
      style="padding-left: 24px;"
      tabindex="-1"
    >
      <span
        aria-label="pie-chart"
        class="anticon anticon-pie-chart ant-menu-item-icon"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="pie-chart"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M864 518H506V160c0-4.4-3.6-8-8-8h-26a398.46 398.46 0 00-282.8 117.1 398.19 398.19 0 00-85.7 127.1A397.61 397.61 0 0072 552a398.46 398.46 0 00117.1 282.8c36.7 36.7 79.5 65.6 127.1 85.7A397.61 397.61 0 00472 952a398.46 398.46 0 00282.8-117.1c36.7-36.7 65.6-79.5 85.7-127.1A397.61 397.61 0 00872 552v-26c0-4.4-3.6-8-8-8zM705.7 787.8A331.59 331.59 0 01470.4 884c-88.1-.4-170.9-34.9-233.2-97.2C174.5 724.1 140 640.7 140 552c0-88.7 34.5-172.1 97.2-234.8 54.6-54.6 124.9-87.9 200.8-95.5V586h364.3c-7.7 76.3-41.3 147-96.6 201.8zM952 462.4l-2.6-28.2c-8.5-92.1-49.4-179-115.2-244.6A399.4 399.4 0 00589 74.6L560.7 72c-4.7-.4-8.7 3.2-8.7 7.9V464c0 4.4 3.6 8 8 8l384-1c4.7 0 8.4-4 8-8.6zm-332.2-58.2V147.6a332.24 332.24 0 01166.4 89.8c45.7 45.6 77 103.6 90 166.1l-256.4.7z"
          />
        </svg>
      </span>
      <span
        class="ant-menu-title-content"
      >
        <a
          href="/"
        >
          menu.dashboard
        </a>
      </span>
    </li>
    <li
      class="ant-menu-item"
      data-menu-id="rc-menu-uuid-test-rule"
      role="menuitem"
      style="padding-left: 24px;"
      tabindex="-1"
    >
      <span
        aria-label="desktop"
        class="anticon anticon-desktop ant-menu-item-icon"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="desktop"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M928 140H96c-17.7 0-32 14.3-32 32v496c0 17.7 14.3 32 32 32h380v112H304c-8.8 0-16 7.2-16 16v48c0 4.4 3.6 8 8 8h432c4.4 0 8-3.6 8-8v-48c0-8.8-7.2-16-16-16H548V700h380c17.7 0 32-14.3 32-32V172c0-17.7-14.3-32-32-32zm-40 488H136V212h752v416z"
          />
        </svg>
      </span>
      <span
        class="ant-menu-title-content"
      >
        <a
          href="/rule"
        >
          menu.rule
        </a>
      </span>
    </li>
    <li
      class="ant-menu-item"
      data-menu-id="rc-menu-uuid-test-SqlQuery"
      role="menuitem"
      style="padding-left: 24px;"
      tabindex="-1"
    >
      <span
        aria-label="search"
        class="anticon anticon-search ant-menu-item-icon"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="search"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
          />
        </svg>
      </span>
      <span
        class="ant-menu-title-content"
      >
        <a
          href="/sqlQuery"
        >
          menu.sqlQuery
        </a>
      </span>
    </li>
    <li
      class="ant-menu-item"
      data-menu-id="rc-menu-uuid-test-SqlQueryEE"
      role="menuitem"
      style="padding-left: 24px;"
      tabindex="-1"
    >
      <span
        aria-label="search"
        class="anticon anticon-search ant-menu-item-icon"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="search"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
          />
        </svg>
      </span>
      <span
        class="ant-menu-title-content"
      >
        <a
          href="/sqlQuery"
        >
          menu.sqlQuery
        </a>
      </span>
    </li>
    <li
      class="ant-menu-submenu ant-menu-submenu-inline ant-menu-submenu-open"
      role="none"
    >
      <div
        aria-controls="rc-menu-uuid-test-order-popup"
        aria-expanded="true"
        aria-haspopup="true"
        class="ant-menu-submenu-title"
        data-menu-id="rc-menu-uuid-test-order"
        role="menuitem"
        style="padding-left: 24px;"
        tabindex="-1"
      >
        <span
          aria-label="console-sql"
          class="anticon anticon-console-sql ant-menu-item-icon"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="console-sql"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <defs>
              <style />
            </defs>
            <path
              d="M301.3 496.7c-23.8 0-40.2-10.5-41.6-26.9H205c.9 43.4 36.9 70.3 93.9 70.3 59.1 0 95-28.4 95-75.5 0-35.8-20-55.9-64.5-64.5l-29.1-5.6c-23.8-4.7-33.8-11.9-33.8-24.2 0-15 13.3-24.5 33.4-24.5 20.1 0 35.3 11.1 36.6 27h53c-.9-41.7-37.5-70.3-90.3-70.3-54.4 0-89.7 28.9-89.7 73 0 35.5 21.2 58 62.5 65.8l29.7 5.9c25.8 5.2 35.6 11.9 35.6 24.4.1 14.7-14.5 25.1-36 25.1z"
            />
            <path
              d="M928 140H96c-17.7 0-32 14.3-32 32v496c0 17.7 14.3 32 32 32h380v112H304c-8.8 0-16 7.2-16 16v48c0 4.4 3.6 8 8 8h432c4.4 0 8-3.6 8-8v-48c0-8.8-7.2-16-16-16H548V700h380c17.7 0 32-14.3 32-32V172c0-17.7-14.3-32-32-32zm-40 488H136V212h752v416z"
            />
            <path
              d="M828.5 486.7h-95.8V308.5h-57.4V534h153.2zm-298.6 53.4c14.1 0 27.2-2 39.1-5.8l13.3 20.3h53.3L607.9 511c21.1-20 33-51.1 33-89.8 0-73.3-43.3-118.8-110.9-118.8s-111.2 45.3-111.2 118.8c-.1 73.7 43 118.9 111.1 118.9zm0-190c31.6 0 52.7 27.7 52.7 71.1 0 16.7-3.6 30.6-10 40.5l-5.2-6.9h-48.8L542 491c-3.9.9-8 1.4-12.2 1.4-31.7 0-52.8-27.5-52.8-71.2.1-43.6 21.2-71.1 52.9-71.1z"
            />
          </svg>
        </span>
        <span
          class="ant-menu-title-content"
        >
          menu.order
        </span>
        <i
          class="ant-menu-submenu-arrow"
        />
      </div>
      <ul
        class="ant-menu ant-menu-sub ant-menu-inline"
        data-menu-list="true"
        id="rc-menu-uuid-test-order-popup"
      >
        <li
          class="ant-menu-item"
          data-menu-id="rc-menu-uuid-test-orderList"
          role="menuitem"
          style="padding-left: 48px;"
          tabindex="-1"
        >
          <span
            aria-label="bars"
            class="anticon anticon-bars ant-menu-item-icon"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="bars"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
            >
              <path
                d="M912 192H328c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h584c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zm0 284H328c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h584c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zm0 284H328c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h584c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zM104 228a56 56 0 10112 0 56 56 0 10-112 0zm0 284a56 56 0 10112 0 56 56 0 10-112 0zm0 284a56 56 0 10112 0 56 56 0 10-112 0z"
              />
            </svg>
          </span>
          <span
            class="ant-menu-title-content"
          >
            <a
              href="/order"
            >
              menu.orderList
            </a>
          </span>
        </li>
      </ul>
    </li>
    <li
      class="ant-menu-submenu ant-menu-submenu-inline ant-menu-submenu-open"
      role="none"
    >
      <div
        aria-controls="rc-menu-uuid-test-plane-popup"
        aria-expanded="true"
        aria-haspopup="true"
        class="ant-menu-submenu-title"
        data-menu-id="rc-menu-uuid-test-plane"
        role="menuitem"
        style="padding-left: 24px;"
        tabindex="-1"
      >
        <span
          aria-label="ci-circle"
          class="anticon anticon-ci-circle ant-menu-item-icon"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="ci-circle"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372zm218-572.1h-50.4c-4.4 0-8 3.6-8 8v384.2c0 4.4 3.6 8 8 8H730c4.4 0 8-3.6 8-8V319.9c0-4.4-3.6-8-8-8zm-281.4 49.6c49.5 0 83.1 31.5 87 77.6.4 4.2 3.8 7.4 8 7.4h52.6c2.4 0 4.4-2 4.4-4.4 0-81.2-64-138.1-152.3-138.1C345.4 304 286 373.5 286 488.4v49c0 114 59.4 182.6 162.3 182.6 88 0 152.3-55.1 152.3-132.5 0-2.4-2-4.4-4.4-4.4h-52.7c-4.2 0-7.6 3.2-8 7.3-4.2 43-37.7 72.4-87 72.4-61.1 0-95.6-44.9-95.6-125.2v-49.3c.1-81.4 34.6-126.8 95.7-126.8z"
            />
          </svg>
        </span>
        <span
          class="ant-menu-title-content"
        >
          menu.auditPlane
        </span>
        <i
          class="ant-menu-submenu-arrow"
        />
      </div>
      <ul
        class="ant-menu ant-menu-sub ant-menu-inline"
        data-menu-list="true"
        id="rc-menu-uuid-test-plane-popup"
      >
        <li
          class="ant-menu-item"
          data-menu-id="rc-menu-uuid-test-auditPlan"
          role="menuitem"
          style="padding-left: 48px;"
          tabindex="-1"
        >
          <span
            aria-label="ci-circle"
            class="anticon anticon-ci-circle ant-menu-item-icon"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="ci-circle"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372zm218-572.1h-50.4c-4.4 0-8 3.6-8 8v384.2c0 4.4 3.6 8 8 8H730c4.4 0 8-3.6 8-8V319.9c0-4.4-3.6-8-8-8zm-281.4 49.6c49.5 0 83.1 31.5 87 77.6.4 4.2 3.8 7.4 8 7.4h52.6c2.4 0 4.4-2 4.4-4.4 0-81.2-64-138.1-152.3-138.1C345.4 304 286 373.5 286 488.4v49c0 114 59.4 182.6 162.3 182.6 88 0 152.3-55.1 152.3-132.5 0-2.4-2-4.4-4.4-4.4h-52.7c-4.2 0-7.6 3.2-8 7.3-4.2 43-37.7 72.4-87 72.4-61.1 0-95.6-44.9-95.6-125.2v-49.3c.1-81.4 34.6-126.8 95.7-126.8z"
              />
            </svg>
          </span>
          <span
            class="ant-menu-title-content"
          >
            <a
              href="/auditPlan"
            >
              menu.auditPlaneList
            </a>
          </span>
        </li>
      </ul>
    </li>
  </ul>
  <div
    aria-hidden="true"
    style="display: none;"
  />
</div>
`;

exports[`SiderMenu should render menu by user role 2`] = `
<div>
  <ul
    class="ant-menu ant-menu-root ant-menu-inline ant-menu-dark"
    data-menu-list="true"
    role="menu"
    tabindex="0"
  >
    <li
      class="ant-menu-item ant-menu-item-selected"
      data-menu-id="rc-menu-uuid-test-dashboard"
      role="menuitem"
      style="padding-left: 24px;"
      tabindex="-1"
    >
      <span
        aria-label="pie-chart"
        class="anticon anticon-pie-chart ant-menu-item-icon"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="pie-chart"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M864 518H506V160c0-4.4-3.6-8-8-8h-26a398.46 398.46 0 00-282.8 117.1 398.19 398.19 0 00-85.7 127.1A397.61 397.61 0 0072 552a398.46 398.46 0 00117.1 282.8c36.7 36.7 79.5 65.6 127.1 85.7A397.61 397.61 0 00472 952a398.46 398.46 0 00282.8-117.1c36.7-36.7 65.6-79.5 85.7-127.1A397.61 397.61 0 00872 552v-26c0-4.4-3.6-8-8-8zM705.7 787.8A331.59 331.59 0 01470.4 884c-88.1-.4-170.9-34.9-233.2-97.2C174.5 724.1 140 640.7 140 552c0-88.7 34.5-172.1 97.2-234.8 54.6-54.6 124.9-87.9 200.8-95.5V586h364.3c-7.7 76.3-41.3 147-96.6 201.8zM952 462.4l-2.6-28.2c-8.5-92.1-49.4-179-115.2-244.6A399.4 399.4 0 00589 74.6L560.7 72c-4.7-.4-8.7 3.2-8.7 7.9V464c0 4.4 3.6 8 8 8l384-1c4.7 0 8.4-4 8-8.6zm-332.2-58.2V147.6a332.24 332.24 0 01166.4 89.8c45.7 45.6 77 103.6 90 166.1l-256.4.7z"
          />
        </svg>
      </span>
      <span
        class="ant-menu-title-content"
      >
        <a
          href="/"
        >
          menu.dashboard
        </a>
      </span>
    </li>
    <li
      class="ant-menu-item"
      data-menu-id="rc-menu-uuid-test-rule"
      role="menuitem"
      style="padding-left: 24px;"
      tabindex="-1"
    >
      <span
        aria-label="desktop"
        class="anticon anticon-desktop ant-menu-item-icon"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="desktop"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M928 140H96c-17.7 0-32 14.3-32 32v496c0 17.7 14.3 32 32 32h380v112H304c-8.8 0-16 7.2-16 16v48c0 4.4 3.6 8 8 8h432c4.4 0 8-3.6 8-8v-48c0-8.8-7.2-16-16-16H548V700h380c17.7 0 32-14.3 32-32V172c0-17.7-14.3-32-32-32zm-40 488H136V212h752v416z"
          />
        </svg>
      </span>
      <span
        class="ant-menu-title-content"
      >
        <a
          href="/rule"
        >
          menu.rule
        </a>
      </span>
    </li>
    <li
      class="ant-menu-item"
      data-menu-id="rc-menu-uuid-test-SqlQuery"
      role="menuitem"
      style="padding-left: 24px;"
      tabindex="-1"
    >
      <span
        aria-label="search"
        class="anticon anticon-search ant-menu-item-icon"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="search"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
          />
        </svg>
      </span>
      <span
        class="ant-menu-title-content"
      >
        <a
          href="/sqlQuery"
        >
          menu.sqlQuery
        </a>
      </span>
    </li>
    <li
      class="ant-menu-item"
      data-menu-id="rc-menu-uuid-test-SqlQueryEE"
      role="menuitem"
      style="padding-left: 24px;"
      tabindex="-1"
    >
      <span
        aria-label="search"
        class="anticon anticon-search ant-menu-item-icon"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="search"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
          />
        </svg>
      </span>
      <span
        class="ant-menu-title-content"
      >
        <a
          href="/sqlQuery"
        >
          menu.sqlQuery
        </a>
      </span>
    </li>
    <li
      class="ant-menu-item"
      data-menu-id="rc-menu-uuid-test-reportStatistics"
      role="menuitem"
      style="padding-left: 24px;"
      tabindex="-1"
    >
      <span
        aria-label="bar-chart"
        class="anticon anticon-bar-chart ant-menu-item-icon"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="bar-chart"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M888 792H200V168c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v688c0 4.4 3.6 8 8 8h752c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zm-600-80h56c4.4 0 8-3.6 8-8V560c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v144c0 4.4 3.6 8 8 8zm152 0h56c4.4 0 8-3.6 8-8V384c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v320c0 4.4 3.6 8 8 8zm152 0h56c4.4 0 8-3.6 8-8V462c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v242c0 4.4 3.6 8 8 8zm152 0h56c4.4 0 8-3.6 8-8V304c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v400c0 4.4 3.6 8 8 8z"
          />
        </svg>
      </span>
      <span
        class="ant-menu-title-content"
      >
        <a
          href="/reportStatistics"
        >
          menu.reportStatistics
        </a>
      </span>
    </li>
    <li
      class="ant-menu-submenu ant-menu-submenu-inline ant-menu-submenu-open"
      role="none"
    >
      <div
        aria-controls="rc-menu-uuid-test-order-popup"
        aria-expanded="true"
        aria-haspopup="true"
        class="ant-menu-submenu-title"
        data-menu-id="rc-menu-uuid-test-order"
        role="menuitem"
        style="padding-left: 24px;"
        tabindex="-1"
      >
        <span
          aria-label="console-sql"
          class="anticon anticon-console-sql ant-menu-item-icon"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="console-sql"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <defs>
              <style />
            </defs>
            <path
              d="M301.3 496.7c-23.8 0-40.2-10.5-41.6-26.9H205c.9 43.4 36.9 70.3 93.9 70.3 59.1 0 95-28.4 95-75.5 0-35.8-20-55.9-64.5-64.5l-29.1-5.6c-23.8-4.7-33.8-11.9-33.8-24.2 0-15 13.3-24.5 33.4-24.5 20.1 0 35.3 11.1 36.6 27h53c-.9-41.7-37.5-70.3-90.3-70.3-54.4 0-89.7 28.9-89.7 73 0 35.5 21.2 58 62.5 65.8l29.7 5.9c25.8 5.2 35.6 11.9 35.6 24.4.1 14.7-14.5 25.1-36 25.1z"
            />
            <path
              d="M928 140H96c-17.7 0-32 14.3-32 32v496c0 17.7 14.3 32 32 32h380v112H304c-8.8 0-16 7.2-16 16v48c0 4.4 3.6 8 8 8h432c4.4 0 8-3.6 8-8v-48c0-8.8-7.2-16-16-16H548V700h380c17.7 0 32-14.3 32-32V172c0-17.7-14.3-32-32-32zm-40 488H136V212h752v416z"
            />
            <path
              d="M828.5 486.7h-95.8V308.5h-57.4V534h153.2zm-298.6 53.4c14.1 0 27.2-2 39.1-5.8l13.3 20.3h53.3L607.9 511c21.1-20 33-51.1 33-89.8 0-73.3-43.3-118.8-110.9-118.8s-111.2 45.3-111.2 118.8c-.1 73.7 43 118.9 111.1 118.9zm0-190c31.6 0 52.7 27.7 52.7 71.1 0 16.7-3.6 30.6-10 40.5l-5.2-6.9h-48.8L542 491c-3.9.9-8 1.4-12.2 1.4-31.7 0-52.8-27.5-52.8-71.2.1-43.6 21.2-71.1 52.9-71.1z"
            />
          </svg>
        </span>
        <span
          class="ant-menu-title-content"
        >
          menu.order
        </span>
        <i
          class="ant-menu-submenu-arrow"
        />
      </div>
      <ul
        class="ant-menu ant-menu-sub ant-menu-inline"
        data-menu-list="true"
        id="rc-menu-uuid-test-order-popup"
      >
        <li
          class="ant-menu-item"
          data-menu-id="rc-menu-uuid-test-orderList"
          role="menuitem"
          style="padding-left: 48px;"
          tabindex="-1"
        >
          <span
            aria-label="bars"
            class="anticon anticon-bars ant-menu-item-icon"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="bars"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
            >
              <path
                d="M912 192H328c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h584c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zm0 284H328c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h584c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zm0 284H328c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h584c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zM104 228a56 56 0 10112 0 56 56 0 10-112 0zm0 284a56 56 0 10112 0 56 56 0 10-112 0zm0 284a56 56 0 10112 0 56 56 0 10-112 0z"
              />
            </svg>
          </span>
          <span
            class="ant-menu-title-content"
          >
            <a
              href="/order"
            >
              menu.orderList
            </a>
          </span>
        </li>
      </ul>
    </li>
    <li
      class="ant-menu-submenu ant-menu-submenu-inline ant-menu-submenu-open"
      role="none"
    >
      <div
        aria-controls="rc-menu-uuid-test-plane-popup"
        aria-expanded="true"
        aria-haspopup="true"
        class="ant-menu-submenu-title"
        data-menu-id="rc-menu-uuid-test-plane"
        role="menuitem"
        style="padding-left: 24px;"
        tabindex="-1"
      >
        <span
          aria-label="ci-circle"
          class="anticon anticon-ci-circle ant-menu-item-icon"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="ci-circle"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372zm218-572.1h-50.4c-4.4 0-8 3.6-8 8v384.2c0 4.4 3.6 8 8 8H730c4.4 0 8-3.6 8-8V319.9c0-4.4-3.6-8-8-8zm-281.4 49.6c49.5 0 83.1 31.5 87 77.6.4 4.2 3.8 7.4 8 7.4h52.6c2.4 0 4.4-2 4.4-4.4 0-81.2-64-138.1-152.3-138.1C345.4 304 286 373.5 286 488.4v49c0 114 59.4 182.6 162.3 182.6 88 0 152.3-55.1 152.3-132.5 0-2.4-2-4.4-4.4-4.4h-52.7c-4.2 0-7.6 3.2-8 7.3-4.2 43-37.7 72.4-87 72.4-61.1 0-95.6-44.9-95.6-125.2v-49.3c.1-81.4 34.6-126.8 95.7-126.8z"
            />
          </svg>
        </span>
        <span
          class="ant-menu-title-content"
        >
          menu.auditPlane
        </span>
        <i
          class="ant-menu-submenu-arrow"
        />
      </div>
      <ul
        class="ant-menu ant-menu-sub ant-menu-inline"
        data-menu-list="true"
        id="rc-menu-uuid-test-plane-popup"
      >
        <li
          class="ant-menu-item"
          data-menu-id="rc-menu-uuid-test-auditPlan"
          role="menuitem"
          style="padding-left: 48px;"
          tabindex="-1"
        >
          <span
            aria-label="ci-circle"
            class="anticon anticon-ci-circle ant-menu-item-icon"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="ci-circle"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372zm218-572.1h-50.4c-4.4 0-8 3.6-8 8v384.2c0 4.4 3.6 8 8 8H730c4.4 0 8-3.6 8-8V319.9c0-4.4-3.6-8-8-8zm-281.4 49.6c49.5 0 83.1 31.5 87 77.6.4 4.2 3.8 7.4 8 7.4h52.6c2.4 0 4.4-2 4.4-4.4 0-81.2-64-138.1-152.3-138.1C345.4 304 286 373.5 286 488.4v49c0 114 59.4 182.6 162.3 182.6 88 0 152.3-55.1 152.3-132.5 0-2.4-2-4.4-4.4-4.4h-52.7c-4.2 0-7.6 3.2-8 7.3-4.2 43-37.7 72.4-87 72.4-61.1 0-95.6-44.9-95.6-125.2v-49.3c.1-81.4 34.6-126.8 95.7-126.8z"
              />
            </svg>
          </span>
          <span
            class="ant-menu-title-content"
          >
            <a
              href="/auditPlan"
            >
              menu.auditPlaneList
            </a>
          </span>
        </li>
      </ul>
    </li>
    <li
      class="ant-menu-submenu ant-menu-submenu-inline ant-menu-submenu-open"
      role="none"
    >
      <div
        aria-controls="rc-menu-uuid-test-platformManage-popup"
        aria-expanded="true"
        aria-haspopup="true"
        class="ant-menu-submenu-title"
        data-menu-id="rc-menu-uuid-test-platformManage"
        role="menuitem"
        style="padding-left: 24px;"
        tabindex="-1"
      >
        <span
          aria-label="container"
          class="anticon anticon-container ant-menu-item-icon"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="container"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M832 64H192c-17.7 0-32 14.3-32 32v832c0 17.7 14.3 32 32 32h640c17.7 0 32-14.3 32-32V96c0-17.7-14.3-32-32-32zm-40 824H232V687h97.9c11.6 32.8 32 62.3 59.1 84.7 34.5 28.5 78.2 44.3 123 44.3s88.5-15.7 123-44.3c27.1-22.4 47.5-51.9 59.1-84.7H792v-63H643.6l-5.2 24.7C626.4 708.5 573.2 752 512 752s-114.4-43.5-126.5-103.3l-5.2-24.7H232V136h560v752zM320 341h384c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8H320c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8zm0 160h384c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8H320c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8z"
            />
          </svg>
        </span>
        <span
          class="ant-menu-title-content"
        >
          menu.platformManage
        </span>
        <i
          class="ant-menu-submenu-arrow"
        />
      </div>
      <ul
        class="ant-menu ant-menu-sub ant-menu-inline"
        data-menu-list="true"
        id="rc-menu-uuid-test-platformManage-popup"
      >
        <li
          class="ant-menu-submenu ant-menu-submenu-inline ant-menu-submenu-open"
          role="none"
        >
          <div
            aria-controls="rc-menu-uuid-test-userCenter-popup"
            aria-expanded="true"
            aria-haspopup="true"
            class="ant-menu-submenu-title"
            data-menu-id="rc-menu-uuid-test-userCenter"
            role="menuitem"
            style="padding-left: 48px;"
            tabindex="-1"
          >
            <span
              aria-label="user"
              class="anticon anticon-user ant-menu-item-icon"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="user"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M858.5 763.6a374 374 0 00-80.6-119.5 375.63 375.63 0 00-119.5-80.6c-.4-.2-.8-.3-1.2-.5C719.5 518 760 444.7 760 362c0-137-111-248-248-248S264 225 264 362c0 82.7 40.5 156 102.8 201.1-.4.2-.8.3-1.2.5-44.8 18.9-85 46-119.5 80.6a375.63 375.63 0 00-80.6 119.5A371.7 371.7 0 00136 901.8a8 8 0 008 8.2h60c4.4 0 7.9-3.5 8-7.8 2-77.2 33-149.5 87.8-204.3 56.7-56.7 132-87.9 212.2-87.9s155.5 31.2 212.2 87.9C779 752.7 810 825 812 902.2c.1 4.4 3.6 7.8 8 7.8h60a8 8 0 008-8.2c-1-47.8-10.9-94.3-29.5-138.2zM512 534c-45.9 0-89.1-17.9-121.6-50.4S340 407.9 340 362c0-45.9 17.9-89.1 50.4-121.6S466.1 190 512 190s89.1 17.9 121.6 50.4S684 316.1 684 362c0 45.9-17.9 89.1-50.4 121.6S557.9 534 512 534z"
                />
              </svg>
            </span>
            <span
              class="ant-menu-title-content"
            >
              menu.userCenter
            </span>
            <i
              class="ant-menu-submenu-arrow"
            />
          </div>
          <ul
            class="ant-menu ant-menu-sub ant-menu-inline"
            data-menu-list="true"
            id="rc-menu-uuid-test-userCenter-popup"
          >
            <li
              class="ant-menu-item ant-menu-item-only-child"
              data-menu-id="rc-menu-uuid-test-user"
              role="menuitem"
              style="padding-left: 72px;"
              tabindex="-1"
            >
              <span
                class="ant-menu-title-content"
              >
                <a
                  href="/user"
                >
                  menu.user
                </a>
              </span>
            </li>
            <li
              class="ant-menu-item ant-menu-item-only-child"
              data-menu-id="rc-menu-uuid-test-role"
              role="menuitem"
              style="padding-left: 72px;"
              tabindex="-1"
            >
              <span
                class="ant-menu-title-content"
              >
                <a
                  href="/user/role"
                >
                  menu.role
                </a>
              </span>
            </li>
            <li
              class="ant-menu-item ant-menu-item-only-child"
              data-menu-id="rc-menu-uuid-test-userGroup"
              role="menuitem"
              style="padding-left: 72px;"
              tabindex="-1"
            >
              <span
                class="ant-menu-title-content"
              >
                <a
                  href="/user/group"
                >
                  menu.userGroup
                </a>
              </span>
            </li>
          </ul>
        </li>
        <li
          class="ant-menu-item"
          data-menu-id="rc-menu-uuid-test-data"
          role="menuitem"
          style="padding-left: 48px;"
          tabindex="-1"
        >
          <span
            aria-label="database"
            class="anticon anticon-database ant-menu-item-icon"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="database"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M832 64H192c-17.7 0-32 14.3-32 32v832c0 17.7 14.3 32 32 32h640c17.7 0 32-14.3 32-32V96c0-17.7-14.3-32-32-32zm-600 72h560v208H232V136zm560 480H232V408h560v208zm0 272H232V680h560v208zM304 240a40 40 0 1080 0 40 40 0 10-80 0zm0 272a40 40 0 1080 0 40 40 0 10-80 0zm0 272a40 40 0 1080 0 40 40 0 10-80 0z"
              />
            </svg>
          </span>
          <span
            class="ant-menu-title-content"
          >
            <a
              href="/data"
            >
              menu.dataSource
            </a>
          </span>
        </li>
        <li
          class="ant-menu-item"
          data-menu-id="rc-menu-uuid-test-ruleTemplate"
          role="menuitem"
          style="padding-left: 48px;"
          tabindex="-1"
        >
          <span
            aria-label="audit"
            class="anticon anticon-audit ant-menu-item-icon"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="audit"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M296 250c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h384c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8H296zm184 144H296c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h184c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8zm-48 458H208V148h560v320c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V108c0-17.7-14.3-32-32-32H168c-17.7 0-32 14.3-32 32v784c0 17.7 14.3 32 32 32h264c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zm440-88H728v-36.6c46.3-13.8 80-56.6 80-107.4 0-61.9-50.1-112-112-112s-112 50.1-112 112c0 50.7 33.7 93.6 80 107.4V764H520c-8.8 0-16 7.2-16 16v152c0 8.8 7.2 16 16 16h352c8.8 0 16-7.2 16-16V780c0-8.8-7.2-16-16-16zM646 620c0-27.6 22.4-50 50-50s50 22.4 50 50-22.4 50-50 50-50-22.4-50-50zm180 266H566v-60h260v60z"
              />
            </svg>
          </span>
          <span
            class="ant-menu-title-content"
          >
            <a
              href="/rule/template"
            >
              menu.ruleTemplate
            </a>
          </span>
        </li>
        <li
          class="ant-menu-item"
          data-menu-id="rc-menu-uuid-test-System"
          role="menuitem"
          style="padding-left: 48px;"
          tabindex="-1"
        >
          <span
            aria-label="setting"
            class="anticon anticon-setting ant-menu-item-icon"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="setting"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M924.8 625.7l-65.5-56c3.1-19 4.7-38.4 4.7-57.8s-1.6-38.8-4.7-57.8l65.5-56a32.03 32.03 0 009.3-35.2l-.9-2.6a443.74 443.74 0 00-79.7-137.9l-1.8-2.1a32.12 32.12 0 00-35.1-9.5l-81.3 28.9c-30-24.6-63.5-44-99.7-57.6l-15.7-85a32.05 32.05 0 00-25.8-25.7l-2.7-.5c-52.1-9.4-106.9-9.4-159 0l-2.7.5a32.05 32.05 0 00-25.8 25.7l-15.8 85.4a351.86 351.86 0 00-99 57.4l-81.9-29.1a32 32 0 00-35.1 9.5l-1.8 2.1a446.02 446.02 0 00-79.7 137.9l-.9 2.6c-4.5 12.5-.8 26.5 9.3 35.2l66.3 56.6c-3.1 18.8-4.6 38-4.6 57.1 0 19.2 1.5 38.4 4.6 57.1L99 625.5a32.03 32.03 0 00-9.3 35.2l.9 2.6c18.1 50.4 44.9 96.9 79.7 137.9l1.8 2.1a32.12 32.12 0 0035.1 9.5l81.9-29.1c29.8 24.5 63.1 43.9 99 57.4l15.8 85.4a32.05 32.05 0 0025.8 25.7l2.7.5a449.4 449.4 0 00159 0l2.7-.5a32.05 32.05 0 0025.8-25.7l15.7-85a350 350 0 0099.7-57.6l81.3 28.9a32 32 0 0035.1-9.5l1.8-2.1c34.8-41.1 61.6-87.5 79.7-137.9l.9-2.6c4.5-12.3.8-26.3-9.3-35zM788.3 465.9c2.5 15.1 3.8 30.6 3.8 46.1s-1.3 31-3.8 46.1l-6.6 40.1 74.7 63.9a370.03 370.03 0 01-42.6 73.6L721 702.8l-31.4 25.8c-23.9 19.6-50.5 35-79.3 45.8l-38.1 14.3-17.9 97a377.5 377.5 0 01-85 0l-17.9-97.2-37.8-14.5c-28.5-10.8-55-26.2-78.7-45.7l-31.4-25.9-93.4 33.2c-17-22.9-31.2-47.6-42.6-73.6l75.5-64.5-6.5-40c-2.4-14.9-3.7-30.3-3.7-45.5 0-15.3 1.2-30.6 3.7-45.5l6.5-40-75.5-64.5c11.3-26.1 25.6-50.7 42.6-73.6l93.4 33.2 31.4-25.9c23.7-19.5 50.2-34.9 78.7-45.7l37.9-14.3 17.9-97.2c28.1-3.2 56.8-3.2 85 0l17.9 97 38.1 14.3c28.7 10.8 55.4 26.2 79.3 45.8l31.4 25.8 92.8-32.9c17 22.9 31.2 47.6 42.6 73.6L781.8 426l6.5 39.9zM512 326c-97.2 0-176 78.8-176 176s78.8 176 176 176 176-78.8 176-176-78.8-176-176-176zm79.2 255.2A111.6 111.6 0 01512 614c-29.9 0-58-11.7-79.2-32.8A111.6 111.6 0 01400 502c0-29.9 11.7-58 32.8-79.2C454 401.6 482.1 390 512 390c29.9 0 58 11.6 79.2 32.8A111.6 111.6 0 01624 502c0 29.9-11.7 58-32.8 79.2z"
              />
            </svg>
          </span>
          <span
            class="ant-menu-title-content"
          >
            <a
              href="/system"
            >
              menu.systemSetting
            </a>
          </span>
        </li>
        <li
          class="ant-menu-item"
          data-menu-id="rc-menu-uuid-test-progress"
          role="menuitem"
          style="padding-left: 48px;"
          tabindex="-1"
        >
          <span
            aria-label="node-index"
            class="anticon anticon-node-index ant-menu-item-icon"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="node-index"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <defs>
                <style />
              </defs>
              <path
                d="M843.5 737.4c-12.4-75.2-79.2-129.1-155.3-125.4S550.9 676 546 752c-153.5-4.8-208-40.7-199.1-113.7 3.3-27.3 19.8-41.9 50.1-49 18.4-4.3 38.8-4.9 57.3-3.2 1.7.2 3.5.3 5.2.5 11.3 2.7 22.8 5 34.3 6.8 34.1 5.6 68.8 8.4 101.8 6.6 92.8-5 156-45.9 159.2-132.7 3.1-84.1-54.7-143.7-147.9-183.6-29.9-12.8-61.6-22.7-93.3-30.2-14.3-3.4-26.3-5.7-35.2-7.2-7.9-75.9-71.5-133.8-147.8-134.4-76.3-.6-140.9 56.1-150.1 131.9s40 146.3 114.2 163.9c74.2 17.6 149.9-23.3 175.7-95.1 9.4 1.7 18.7 3.6 28 5.8 28.2 6.6 56.4 15.4 82.4 26.6 70.7 30.2 109.3 70.1 107.5 119.9-1.6 44.6-33.6 65.2-96.2 68.6-27.5 1.5-57.6-.9-87.3-5.8-8.3-1.4-15.9-2.8-22.6-4.3-3.9-.8-6.6-1.5-7.8-1.8l-3.1-.6c-2.2-.3-5.9-.8-10.7-1.3-25-2.3-52.1-1.5-78.5 4.6-55.2 12.9-93.9 47.2-101.1 105.8-15.7 126.2 78.6 184.7 276 188.9 29.1 70.4 106.4 107.9 179.6 87 73.3-20.9 119.3-93.4 106.9-168.6zM329.1 345.2a83.3 83.3 0 11.01-166.61 83.3 83.3 0 01-.01 166.61zM695.6 845a83.3 83.3 0 11.01-166.61A83.3 83.3 0 01695.6 845z"
              />
            </svg>
          </span>
          <span
            class="ant-menu-title-content"
          >
            <a
              href="/progress"
            >
              menu.progressManage
            </a>
          </span>
        </li>
        <li
          class="ant-menu-item"
          data-menu-id="rc-menu-uuid-test-Whitelist"
          role="menuitem"
          style="padding-left: 48px;"
          tabindex="-1"
        >
          <span
            aria-label="profile"
            class="anticon anticon-profile ant-menu-item-icon"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="profile"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M880 112H144c-17.7 0-32 14.3-32 32v736c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V144c0-17.7-14.3-32-32-32zm-40 728H184V184h656v656zM492 400h184c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8H492c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8zm0 144h184c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8H492c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8zm0 144h184c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8H492c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8zM340 368a40 40 0 1080 0 40 40 0 10-80 0zm0 144a40 40 0 1080 0 40 40 0 10-80 0zm0 144a40 40 0 1080 0 40 40 0 10-80 0z"
              />
            </svg>
          </span>
          <span
            class="ant-menu-title-content"
          >
            <a
              href="/whitelist"
            >
              menu.whitelist
            </a>
          </span>
        </li>
      </ul>
    </li>
  </ul>
  <div
    aria-hidden="true"
    style="display: none;"
  />
</div>
`;
